Fix graph on mobile.

--- a/app/static/css/screen-dark.css
+++ b/app/static/css/screen-dark.css
@@ -287,6 +287,8 @@ input[type="text"] {
     /*border-radius: 20px;*/
     padding: 10px; 
     margin: 10px; 
+    max-width: 900px;
+    max-height: 400px;
 }
 
 .search-header {
